Revert layout bug

--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,6 @@ img {
   width: 220px;
   height: 220px;
   padding-bottom: 10px;
-  padding-left: 20px;
 }
 
 ul.img-list {
